k8s/namespaces/default/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: default
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: vaultwarden
  type: ClusterIP
